added sign in with firebase

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@faker-js/faker": "^8.4.1",
+    "@types/firebase": "^2.4.32",
+    "firebase": "^11.4.0",
     "framer-motion": "^11.0.8",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
