--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   },
   "dependencies": {
     "@faker-js/faker": "^8.4.1",
+    "@reduxjs/toolkit": "^2.6.0",
     "@types/firebase": "^2.4.32",
     "firebase": "^11.4.0",
     "framer-motion": "^11.0.8",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.30.0"
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^6.30.0",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
